Make track table fixed width with text clipping

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -322,9 +322,14 @@ input[type='range']::-webkit-slider-thumb {
 	background: #333;
 	color: white;
 	font-size: 12px;
+	table-layout: fixed;
+	white-space: nowrap;
 	& td {
 		padding: 5px 1em;
 		background: #111;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 	& tbody tr:nth-of-type(odd) td {
 		background: #151515;
@@ -356,6 +361,7 @@ input[type='range']::-webkit-slider-thumb {
 	width: 100%;
 	height: 15px;
 	background-position: center;
+	background-size: cover;
 }
 
 
